--- a/frontend/src/components/pages/project-reporting-detailed/detailed.html
+++ b/frontend/src/components/pages/project-reporting-detailed/detailed.html
@@ -5,7 +5,7 @@
 	<li class="active" translate="project.reporting_compare_sites"></li>
 </ol>
 
-<reporting-graph plots="$ctrl.graphs"></reporting-graph>
+<!-- <reporting-graph plots="$ctrl.graphs"></reporting-graph> -->
 
 <select-indicator
 	project="$ctrl.project"
