--- a/frontend/src/components/pages/project-reporting-general/general.html
+++ b/frontend/src/components/pages/project-reporting-general/general.html
@@ -5,7 +5,11 @@
 	<li class="active" translate="shared.reporting_general"></li>
 </ol>
 
-<reporting-graph plots="$ctrl.graphs"></reporting-graph>
+<reporting-graph
+	x="$ctrl.graphX"
+	ys="$ctrl.graphYs"
+	presentation="$ctrl.graphType"
+	ng-show="$ctrl.graphYs|length"></reporting-graph>
 
 <project-group-by
 	project="$ctrl.project"
@@ -19,9 +23,13 @@
 	project="$ctrl.project"
 	themes="$ctrl.themes"
 	cc-indicators="$ctrl.ccIndicators"
+
+
 	filter="$ctrl.filter"
 	group-by="$ctrl.groupBy"
+	columns="$ctrl.columns"
+
 	on-group-by-update="$ctrl.onGroupByUpdate(groupBy)"
-	on-graph-toggle="$ctrl.onGraphToggle(id)">
+	on-plot-toggle="$ctrl.onPlotToggle(id, name, data)">
 </general-table>
 
