--- a/frontend/src/components/pages/project-reporting-detailed/tr-indicator.html
+++ b/frontend/src/components/pages/project-reporting-detailed/tr-indicator.html
@@ -1,9 +1,9 @@
-<td class="noprint" style="text-align: center">
+<td class="noprint" style="text-align: center" ng-style="$ctrl.firstColStyle">
 	<i class="fa fa-line-chart"
 	   ng-click="$ctrl.toggleGraph()"
 	   ng-style="{color: $ctrl.graphToggled ? 'black' : 'revert'}"></i>
 </td>
-<td class="row-title">{{$ctrl.sectionTitle}}</td>
+<td class="row-title" ng-style="$ctrl.firstColStyle">{{$ctrl.sectionTitle}}</td>
 
 <td ng-if="!$ctrl.values"
 	colspan="{{$ctrl.slots.length + 1}}"
