--- a/frontend/src/components/pages/project-reporting-detailed/detailed.html
+++ b/frontend/src/components/pages/project-reporting-detailed/detailed.html
@@ -5,7 +5,11 @@
 	<li class="active" translate="project.reporting_compare_sites"></li>
 </ol>
 
-<!-- <reporting-graph plots="$ctrl.graphs"></reporting-graph> -->
+<reporting-graph
+	x="$ctrl.graphX"
+	ys="$ctrl.graphYs"
+	presentation="'line'"
+	ng-if="$ctrl.graphYs|length"></reporting-graph>
 
 <select-indicator
 	project="$ctrl.project"
@@ -32,8 +36,12 @@
 <table-indicator
 	project="$ctrl.project"
 	filter="$ctrl.filter"
+	indicator="$ctrl.indicator"
+
 	group-by="$ctrl.groupBy"
-	indicator="$ctrl.indicator"></table-indicator>
+	slots="$ctrl.slots"
+
+	on-plot-toggle="$ctrl.onPlotToggle(id, name, data)"></table-indicator>
 
 
 <!--
