--- a/frontend/src/components/pages/project-reporting-detailed/table-indicator.html
+++ b/frontend/src/components/pages/project-reporting-detailed/table-indicator.html
@@ -1,31 +1,19 @@
 
-<table
-	id="reporting"
-	class="table table-bordered table-condensed">
-
-	<thead>
-		<tr>
-			<th style="width: 30px" class="noprint"></th>
-			<th translate="shared.name" style="min-width: 300px"></th>
-			<th ng-repeat="slot in $ctrl.slots"
-				style="min-width: 50px"
-				title="{{slot|formatSlotLong}}">
-				{{slot|formatSlot}}
-			</th>
-			<th style="min-width: 50px" title="Total">_total</th>
-		</tr>
-	</thead>
-
+<table id="reporting" class="table table-bordered table-condensed">
 	<tbody>
 		<tr	tr-indicator-detailed
 			section-title="'project.full_project'|translate"
 			indicator="$ctrl.indicator"
 			error-message="$ctrl.errorMessages"
 			slots="$ctrl.slots"
-			values="$ctrl.values['_total']"></tr>
+			values="$ctrl.values['_total']"
+			first-col-style="$ctrl.firstColStyle"
+			on-plot-toggle="$ctrl.onPlotToggle({id: $ctrl.project._id, name: name, data: data})"></tr>
 		<tr>
-			<td class="noprint"></td>
-			<th translate="project.collection_site_list" colspan="{{$ctrl.slots.length + 2}}"></th>
+			<td class="noprint" ng-style="$ctrl.firstColStyle"></td>
+			<th	translate="project.collection_site_list"
+				colspan="{{$ctrl.slots.length + 2}}"
+				ng-style="$ctrl.firstColStyle"></th>
 		</tr>
 		<tr	ng-repeat="site in $ctrl.sites"
 			tr-indicator-detailed
@@ -33,12 +21,16 @@
 			indicator="$ctrl.indicator"
 			error-message="$ctrl.errorMessages"
 			slots="$ctrl.slots"
-			values="$ctrl.values[site.id]">
+			values="$ctrl.values[site.id]"
+			first-col-style="$ctrl.firstColStyle"
+			on-plot-toggle="$ctrl.onPlotToggle({id: site.id, name: name, data: data})">
 		</tr>
 
 		<tr>
-			<td class="noprint"></td>
-			<th translate="project.groups" colspan="{{$ctrl.slots.length + 2}}"></th>
+			<td class="noprint" ng-style="$ctrl.firstColStyle"></td>
+			<th translate="project.groups"
+				colspan="{{$ctrl.slots.length + 2}}"
+				ng-style="$ctrl.firstColStyle"></th>
 		</tr>
 		<tr	ng-repeat="group in $ctrl.groups"
 			tr-indicator-detailed
@@ -46,7 +38,21 @@
 			indicator="$ctrl.indicator"
 			error-message="$ctrl.errorMessages"
 			slots="$ctrl.slots"
-			values="$ctrl.values[group.id]">
+			values="$ctrl.values[group.id]"
+			first-col-style="$ctrl.firstColStyle"
+			on-plot-toggle="$ctrl.onPlotToggle({id: group.id, name: name, data: data})">
 		</tr>
 	</tbody>
+	<thead ng-style="$ctrl.headerStyle">
+		<tr>
+			<th style="width: 30px" class="noprint" ng-style="$ctrl.firstColStyle"></th>
+			<th translate="shared.name" style="min-width: 300px" ng-style="$ctrl.firstColStyle"></th>
+			<th ng-repeat="slot in $ctrl.slots"
+				style="min-width: 50px"
+				title="{{slot|formatSlotLong}}">
+				{{slot|formatSlot}}
+			</th>
+			<th style="min-width: 50px" title="Total">Total</th>
+		</tr>
+	</thead>
 </table>
