--- a/frontend/src/components/pages/project-input-menu/menu.html
+++ b/frontend/src/components/pages/project-input-menu/menu.html
@@ -4,9 +4,9 @@
 		<div class="panel-group">
 
 			<div class="panel panel-default" acl-has-project-role="owner" acl-project="$ctrl.project">
-				<div class="panel-heading">
+				<div class="panel-heading clickable" ui-sref="main.project.structure.home">
 					<i class="fa fa-caret-down pull-right"></i>
-					<a ui-sref="main.project.structure.home" class="panel-title" translate="project.structure"></a>
+					<h4 class="panel-title" translate="project.structure"></h4>
 				</div>
 			</div>
 
@@ -43,9 +43,9 @@
 			</div>
 
 			<div class="panel panel-default">
-				<div class="panel-heading">
+				<div class="panel-heading clickable" ui-sref="main.project.reporting.home">
 					<i class="fa fa-caret-down pull-right"></i>
-					<a ui-sref="main.project.reporting.home" class="panel-title" translate="shared.reporting"></a>
+					<h4 class="panel-title" translate="shared.reporting"></h4>
 				</div>
 			</div>
 
