--- a/frontend/src/components/pages/project-reporting-menu/menu.html
+++ b/frontend/src/components/pages/project-reporting-menu/menu.html
@@ -4,16 +4,16 @@
 		<div class="panel-group">
 
 			<div class="panel panel-default" acl-has-project-role="owner" acl-project="$ctrl.project">
-				<div class="panel-heading">
+				<div class="panel-heading clickable" ui-sref="main.project.structure.home">
 					<i class="fa fa-caret-down pull-right"></i>
-					<a ui-sref="main.project.structure.home" class="panel-title" translate="project.structure"></a>
+					<h4 class="panel-title" translate="project.structure"></h4>
 				</div>
 			</div>
 
 			<div class="panel panel-default" acl-has-project-role="input" acl-project="$ctrl.project">
-				<div class="panel-heading">
+				<div class="panel-heading clickable" ui-sref="main.project.input.home">
 					<i class="fa fa-caret-down pull-right"></i>
-					<a ui-sref="main.project.input.home" class="panel-title" translate="project.input"></a>
+					<h4 class="panel-title" translate="project.input"></h4>
 				</div>
 			</div>
 
