--- a/frontend/src/components/pages/project-structure-menu/menu.html
+++ b/frontend/src/components/pages/project-structure-menu/menu.html
@@ -127,16 +127,16 @@
 			</div>
 
 			<div class="panel panel-default" acl-has-project-role="input" acl-project="$ctrl.project">
-				<div class="panel-heading">
+				<div class="panel-heading clickable" ui-sref="main.project.input.home">
 					<i class="fa fa-caret-down pull-right"></i>
-					<a ui-sref="main.project.input.home" class="panel-title" translate="project.input"></a>
+					<h4 class="panel-title" translate="project.input"></h4>
 				</div>
 			</div>
 
 			<div class="panel panel-default">
-				<div class="panel-heading">
+				<div class="panel-heading clickable" ui-sref="main.project.reporting.home">
 					<i class="fa fa-caret-down pull-right"></i>
-					<a ui-sref="main.project.reporting.home" class="panel-title" translate="shared.reporting"></a>
+					<h4 class="panel-title" translate="shared.reporting"></h4>
 				</div>
 			</div>
 
