Add save button for graphs

--- a/frontend/src/components/pages/project-reporting-general/general.html
+++ b/frontend/src/components/pages/project-reporting-general/general.html
@@ -9,7 +9,7 @@
 	x="$ctrl.graphX"
 	ys="$ctrl.graphYs"
 	presentation="$ctrl.graphType"
-	ng-show="$ctrl.graphYs|length"></reporting-graph>
+	ng-if="$ctrl.graphYs|length"></reporting-graph>
 
 <project-group-by
 	project="$ctrl.project"
