--- a/frontend/src/components/pages/project-reporting-general/table.html
+++ b/frontend/src/components/pages/project-reporting-general/table.html
@@ -1,5 +1,3 @@
-<style id="reporting-style"></style>
-
 
 <table id="reporting" class="table table-bordered table-condensed">
 	<tbody
@@ -21,11 +19,12 @@
 	</tbody>
 	<thead ng-style="$ctrl.headerStyle">
 		<tr>
-			<th style="width: 30px" class="noprint" ng-style="$ctrl.firstColStyle"></th>
-			<th style="width: 330px" translate="shared.name" ng-style="$ctrl.firstColStyle"></th>
-			<th translate="project.baseline" style="width: 60px"></th>
-			<th translate="project.target" style="width: 60px"></th>
-			<th ng-repeat="col in $ctrl.columns track by col.id" style="min-width: 50px" title="{{col.title}}">
+			<th class="row-graph" ng-style="$ctrl.firstColStyle"></th>
+			<th class="row-title" translate="shared.name" ng-style="$ctrl.firstColStyle"></th>
+			<th class="row-dimension" ng-style="$ctrl.firstColStyle"></th>
+			<th translate="project.baseline"></th>
+			<th translate="project.target"></th>
+			<th ng-repeat="col in $ctrl.columns track by col.id" title="{{col.title}}">
 				{{col.name}}
 			</th>
 		</tr>
