--- a/frontend/src/components/pages/project-input-home/home.html
+++ b/frontend/src/components/pages/project-input-home/home.html
@@ -17,10 +17,8 @@
 <table class="table table-bordered table-striped">
 	<thead>
 		<tr>
-			<th>Tâche</th>
-			<th>Saisies manquantes</th>
-			<th>Saisies incomplètes</th>
-			<th>Saisies complètes</th>
+			<th style="width: 50%">Tâche</th>
+			<th>État</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -29,17 +27,24 @@
 				Remplir les {{$ctrl.status[dataSource.id].total}} saisies attendues sur
 				<a ui-sref="main.project.input.list({dataSourceId: dataSource.id})">{{dataSource.name}}</a>
 			</td>
-			<td translate="shared.loading" colspan="3" ng-if="!$ctrl.status"></td>
+			<td translate="shared.loading" ng-if="!$ctrl.status"></td>
 
 			<td ng-if="$ctrl.status">
-				{{100*$ctrl.status[dataSource.id].missing|number:0}}%
-			</td>
-			<td ng-if="$ctrl.status">
-				{{100*$ctrl.status[dataSource.id].incomplete|number:0}}%
-			</td>
-			<td ng-if="$ctrl.status">
-				{{100*$ctrl.status[dataSource.id].complete|number:0}}%
+				<div class="progress" style="margin-bottom: 0">
+					<div class="progress-bar progress-bar-success" ng-style="{width: 100 * $ctrl.status[dataSource.id].complete + '%'}">
+						<span>{{100*$ctrl.status[dataSource.id].complete|number:0}}% complets</span>
+					</div>
+					<div class="progress-bar progress-bar-warning" ng-style="{width: 100 * $ctrl.status[dataSource.id].incomplete + '%'}">
+						<span>{{100*$ctrl.status[dataSource.id].incomplete|number:0}}% partiels</span>
+					</div>
+					<div class="progress-bar progress-bar-danger" ng-style="{width: 100 * $ctrl.status[dataSource.id].missing + '%'}">
+						<span>{{100*$ctrl.status[dataSource.id].missing|number:0}}% manquants</span>
+					</div>
+				</div>
 			</td>
 		</tr>
 	</tbody>
 </table>
+
+
+
