--- a/frontend/src/components/pages/project-input-menu/menu.html
+++ b/frontend/src/components/pages/project-input-menu/menu.html
@@ -1,6 +1,6 @@
 
-<div class="row">
-	<div class="col-md-2 noprint">
+<div class="project-columns">
+	<div class="project-menu">
 		<div class="panel-group">
 
 			<div class="panel panel-default" acl-has-project-role="owner" acl-project="$ctrl.project">
@@ -52,7 +52,7 @@
 		</div>
 	</div>
 
-	<div class="col-md-10 print-full-width">
+	<div class="project-content">
 		<ui-view project="$ctrl.project"></ui-view>
 	</div>
 </div>
