--- a/frontend/src/components/pages/project-structure-menu/menu.html
+++ b/frontend/src/components/pages/project-structure-menu/menu.html
@@ -1,6 +1,6 @@
 
-<div class="row">
-	<div class="col-md-2 noprint">
+<div class="project-columns">
+	<div class="project-menu">
 		<div class="panel-group">
 
 			<div class="panel panel-default">
@@ -143,7 +143,7 @@
 		</div>
 	</div>
 
-	<div class="col-md-10 print-full-width">
+	<div class="project-content">
 		<div>
 			<div id="formblock">
 				<!--
