Split structure and input homes into columns

--- a/frontend/src/components/pages/project-input-home/home.html
+++ b/frontend/src/components/pages/project-input-home/home.html
@@ -8,12 +8,14 @@
 
 <legend translate="project.input"></legend>
 
+
+<div class="row">
+	<div class="col-md-4">
 <p>Le rôle de cette section est de fournir à Monitool les données qui lui permettront de calculer vos indicateurs.</p>
 
 <p>Chaque source de données renseignée lors de la formalisation du projet donne lieu à des formulaires réguliers.</p>
-
-<p>État actuel des saisies:</p>
-
+</div>
+<div class="col-md-8">
 <table class="table table-bordered table-striped">
 	<thead>
 		<tr>
@@ -48,3 +50,4 @@
 
 
 
+</div></div>
